[gd_scene load_steps=8 format=2]

[ext_resource path="res://chain.gd" type="Script" id=1]
[ext_resource path="res://пила_пс.png" type="Texture" id=2]
[ext_resource path="res://пила.png" type="Texture" id=3]
[ext_resource path="res://sound/zapsplat_foley_foam_block_dense_slice_cut_saw_sharp_knife_001_47741.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/Пила режет плоть и ломает кости.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 119.052, 52.807 )

[node name="chain" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.14426 )
shape = SubResource( 2 )

[node name="chainSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="chainSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="input_event" from="." to="." method="_on_chain_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_chain_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_chain_mouse_exited"]
